--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0"
   }
